<resources>
    <string name="app_name">ManageTask2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi,</string>
    <string name="username">UserName</string>
    <string name="number">23</string>
    <string name="scheduled">Scheduled</string>
    <string name="all_tags">All tags</string>
    <string name="finance">#Finance</string>
    <string name="family">#Family</string>
    <string name="contract">#Contract</string>
    <string name="document">#Document</string>
    <string name="business">#Business</string>
    <string name="games_store">#Games store</string>
    <string name="store">#Store</string>
    <string name="food">#Food</string>
    <string name="tags">Tags</string>
    <string name="my_list">My List</string>
    <string name="add">Add</string>
    <string name="_21">21</string>
    <string name="new_task">New task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="selected_date">16 mar 2022</string>
    <string name="time">time</string>
    <string name="selected_time">1703hrs</string>
    <string name="radio_button">Never</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="add_new_tag">Add new tag...</string>
    <string name="mark_as_important">Mark as important</string>
    <string name="list">List</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="home">Home</string>
    <string name="sample_title">Partners meeting</string>
    <string name="allTaskDate">Today</string>
    <string name="allTaskTime">9.00AM</string>
    <string name="_business">Business</string>
    <string name="annually">Annually</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="weekdays">Weekdays</string>
    <string name="daily">Daily</string>
    <string name="_never">Never</string>
    <string name="add_image">Add Image</string>
    <string name="meeting">Meeting the client</string>
    <string name="payment">Demanding for the payment</string>
    <string name="all_task">All tasks</string>
    <string name="_0">0</string>
    <string name="introduction_text">Manage and plan for you day\n Set notification so that you are notified\n of events</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="last_name">Last name</string>
    <string name="managetasks">ManageTasks</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="register">Let\'s register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="register_">Register</string>
    <string name="start">Start</string>
    <string name="information">Information</string>
    <string name="notification">Notification</string>
    <string name="f_a_q">F.A.Q</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">pauljuma736@gmail.com</string>
    <string name="name">Paul</string>
    <string name="notification_title">New Notification</string>
    <string name="new_notification">You have a new notification</string>
    <string name="reminder_notification_id">Notification Id</string>
    <string name="channel_name">Channel name</string>
    <string name="questions">Questions</string>
    <string name="task_function">What does task manager do?</string>
    <string name="answer">In the above code, navController.navigate(R.id.navigation_drawer) navigates to the navigation drawer fragment using the ID of the navigation graph destination that represents the navigation drawer. If the navigation drawer is already on the back stack, this will pop the back stack back to the navigation drawer.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email">We will send the password reset link to your email</string>
    <string name="enter_email">Enter email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
</resources>