<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rgRepeatType"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:text="@string/radio_button"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/rbNever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/never"/>

    <RadioButton
        android:id="@+id/rbDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily"/>

    <RadioButton
        android:id="@+id/rbWeekdays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekdays"/>
</RadioGroup>